--- a/RoyalCoffee.csproj
+++ b/RoyalCoffee.csproj
@@ -72,11 +72,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ucPanel\ucMain.cs">
+    <Compile Include="ucPanel\UcMain.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ucPanel\ucMain.Designer.cs">
-      <DependentUpon>ucMain.cs</DependentUpon>
+    <Compile Include="ucPanel\UcMain.Designer.cs">
+      <DependentUpon>UcMain.cs</DependentUpon>
     </Compile>
     <Compile Include="ucPanel\UcOrder.cs">
       <SubType>UserControl</SubType>
@@ -106,8 +106,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="ucPanel\ucMain.resx">
-      <DependentUpon>ucMain.cs</DependentUpon>
+    <EmbeddedResource Include="ucPanel\UcMain.resx">
+      <DependentUpon>UcMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ucPanel\UcOrder.resx">
       <DependentUpon>UcOrder.cs</DependentUpon>
